# events

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.infra.yml  docker-compose.observability.yml  docker-compose.services.yml  docker-compose.yml
event-booker/: CLAUDE.md  Dockerfile  entrypoint.sh  pyproject.toml
event-booker/event_booker/: config.py  dto.py  errors.py  ioc.py  logger.py  main.py  metrics.py  routes.py  telemetry.py
event-booker/event_booker/adapters/: scheduling_client.py  users_client.py
event-booker/event_booker/interfaces/: clients.py
event-booker/event_booker/routers/: public.py
event-booker/event_booker/schemas/: public.py
event-booker/event_booker/services/: guest_booking.py
event-booker/tests/: conftest.py  test_booking_fields_bff.py  test_guest_booking.py  test_health.py  test_public_api.py  test_scheduling_client.py  test_users_client.py
event-booking/: .env.example  CLAUDE.md  pyproject.toml
event-booking/docs/: API_CONTRACTS.md  AUDIT.md  DEPENDENCIES.md  SERVICE_OVERVIEW.md
event-booking/event_booking/: config.py  consumer.py  dtos.py  ioc.py  logger.py  main.py  scheduler.py
event-booking/event_booking/adapters/: db.py  events.py  get_stream.py  shortener.py  sql.py
event-booking/event_booking/controllers/: booking.py  chat.py  constraints.py  meeting.py
event-booking/event_booking/interfaces/: chat.py  constraints.py  db.py  events.py  meeting.py  shortener.py  sql.py
event-booking/tests/: conftest.py  factories.py  test_consumer.py  test_ioc.py  test_scheduler.py
event-booking/tests/adapters/: test_db.py  test_events.py  test_get_stream.py  test_shortener.py  test_sql.py
event-booking/tests/controllers/: test_booking.py  test_chat.py  test_constraints.py  test_meeting.py
event-organizer/: .gitignore  CLAUDE.md  Dockerfile  entrypoint.sh  pyproject.toml
event-organizer/alembic/: env.py
event-organizer/alembic/versions/: 0001_organizer_credential.py
event-organizer/event_organizer/: config.py  errors.py  ioc.py  logger.py  main.py  metrics.py  routes.py
event-organizer/event_organizer/adapters/: interfaces.py  scheduling_client.py  sql.py  users_client.py
event-organizer/event_organizer/auth/: identity.py  jwt.py  password.py
event-organizer/event_organizer/credentials/: adapter.py  dto.py  interfaces.py
event-organizer/event_organizer/interfaces/: sql.py
event-organizer/event_organizer/routers/: admin.py  auth.py  me.py
event-organizer/event_organizer/schemas/: admin.py  auth.py  me.py
event-organizer/event_organizer/services/: login_service.py  password_change_service.py  profile_service.py  provisioning_service.py
event-organizer/tests/: conftest.py  test_auth_api.py  test_credential_adapter.py  test_credential_schema.py  test_health.py  test_jwt.py  test_me_api.py  test_password.py  test_scheduling_client.py  test_users_client.py
event-scheduling/: .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  uvicorn_config.json
event-scheduling/alembic/: env.py
event-scheduling/alembic/versions/: 0001_initial.py  0002_booking.py  0003_outbox.py  0004_booking_reminder_sent.py  0005_external_calendar.py  0006_booking_fields.py  0007_reassigned_log_kind.py
event-scheduling/docs/: API_CONTRACTS.md  AUDIT.md  DATA_MODEL.md  DEPENDENCIES.md  SERVICE_OVERVIEW.md
event-scheduling/event_scheduling/: auth.py  config.py  errors.py  ioc.py  logger.py  main.py  metrics.py  routes.py  telemetry.py  validation.py
event-scheduling/event_scheduling/adapters/: event_type_db.py  schedule_db.py  sql.py
event-scheduling/event_scheduling/booking/: assignment.py  busy_source.py  detail_service.py  dto.py  interfaces.py  limits.py  read_adapter.py  service.py  write_adapter.py
event-scheduling/event_scheduling/booking_fields/: adapter.py  controller.py  domain.py  dto.py  interfaces.py
event-scheduling/event_scheduling/calendar/: busy_source.py  composite_busy.py  dispatcher.py  dto.py  ical_client.py  ical_parser.py  interfaces.py  read_adapter.py  sync_service.py  write_adapter.py
event-scheduling/event_scheduling/controllers/: event_type.py  schedule.py
event-scheduling/event_scheduling/db/: models.py
event-scheduling/event_scheduling/dto/: event_type.py  schedule.py
event-scheduling/event_scheduling/interfaces/: busy_times.py  event_type.py  schedule.py  sql.py
event-scheduling/event_scheduling/publishing/: dispatcher.py  dto.py  interfaces.py  outbox_writer.py  payload.py  receiver_client.py  users_client.py
event-scheduling/event_scheduling/reminders/: dispatcher.py  dto.py  interfaces.py  payload.py  read_adapter.py  write_adapter.py
event-scheduling/event_scheduling/routers/: booking.py  booking_field.py  calendar.py  event_type.py  schedule.py  slots.py
event-scheduling/event_scheduling/schemas/: booking.py  booking_field.py  calendar.py  event_type.py  schedule.py  slots.py
event-scheduling/event_scheduling/slots/: dto.py  (+5 more)
event-scheduling/scripts/: etl_from_calcom.py  etl_mapping.py
event-scheduling/tests/: conftest.py  test_booking_api.py  test_booking_assignment.py  test_booking_busy_source.py  test_booking_create_answers.py  test_booking_fields_api.py  test_booking_fields_db.py  test_booking_fields_domain.py  test_booking_limits.py  test_booking_schema.py  test_booking_write_adapter.py  test_busy_times.py  test_calendar_adapters.py  test_calendar_api.py  test_calendar_e2e.py  test_calendar_schema.py  test_calendar_sync.py  test_change_log.py  test_composite_busy.py  test_dispatcher.py  test_etl_mapping.py  test_etl_run.py  test_event_type_api.py  test_external_busy_source.py  test_health.py  test_ical_client.py  test_ical_parser.py  test_migration_0006.py  test_outbox_schema.py  test_outbox_writer.py  test_publishing_clients.py  test_publishing_payload.py  test_reminder_config_ioc.py  test_reminder_dispatcher.py  test_reminder_payload.py  test_reminder_read_adapter.py  test_reminder_schema.py  test_reminder_write_adapter.py  test_schedule_api.py  test_schema.py  (+5 more)
(+328 files in other folders)
